...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint=""
        android:id="@+id/translator_name"
        android:textSize="30dp"
        android:paddingBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_weight="1"
...
