<resources>
    <string name="app_name">Naakh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="Register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="token">Token</string>
    <string name="title_activity_translate">Translate</string>
    <string name="logoutTitle">Logout</string>
    <string name="logoutKey">logoutKey</string>
    <string name="done">Done</string>
    <string name="translate_here">Translate Here</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_alert_dialog">" "</string>
    <string name="title_activity_translation_complete_dialog">Translation</string>
    <string name="please_translate">Please translate :)</string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="translate">Translate</string>
    <string name="review">Review</string>
    <string name="title_activity_verification">Verification</string>
    <string name="correct_translations_message">Are you sure that the translation is correct?</string>
    <string name="not_sure_translation_message">Do you want to skip this verification?</string>
    <string name="incorrect_translation_message">Which one of the following is incorrect for the translation?</string>
    <string name="choose_incorrect_options">Why is this translation incorrect?</string>
    <string-array name="incorrect_translation_options">
        <item>Context</item>
        <item>Spelling</item>
        <item>Grammar</item>
    </string-array>
    <string name="title_activity_fix_translation">Correct The Translation</string>
    <string name="no_more_translations">No more translations!</string>
    <string name="OK">OK</string>
    <string name="are_you_sure">"Are you sure? :) "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_another_translation">Do another translation?</string>
    <string name="no_more_verifications">No More Verifications</string>
    <string name="do_another_verification">Want to help out with another verification?</string>
    <string name="cancel">Cancel</string>
    <string name="correct_it">Correct it!</string>
    <string name="select_whats_incorrect">Select whats incorrect</string>
    <string name="languages">Languages</string>
    <string name="loading">Loading</string>
</resources>
