<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UI.Verification.VerificationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:isScrollContainer="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingRight="@dimen/layout_padding"
            android:paddingTop="@dimen/activity_vertical_margin">


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_tone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tone_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:text="Tone:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tone_verification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/tone_label"
                        android:layout_toRightOf="@+id/tone_label"
                        android:hint="Not available"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_topics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_tone"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/topics_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:text="Topics:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/topics_verification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="3dp"
                        android:layout_toEndOf="@+id/topics_label"
                        android:layout_toRightOf="@+id/topics_label"
                        android:hint="Not available"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_original_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_topics"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/original_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/layout_padding"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="Original: "
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/original_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/original_label"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_translation_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_original_phrase"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/translated_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/layout_padding"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="Translated:"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/translated_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/translated_label"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/correct_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="correctOptionDialog"
            android:text="Correct"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <Button
            android:id="@+id/incorrect_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_translation_phrase"
            android:layout_centerHorizontal="true"
            android:onClick="incorrectDialog"
            android:text="Incorrect"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <Button
            android:id="@+id/not_sure_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="notSureDialog"
            android:text="Not sure"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />
    </LinearLayout>


</LinearLayout>


